# meeting-auto-speech-tool

./: .gitignore  .gitignore.txt  README.md  app_gui.py  meeting.bat  meeting.py  meeting.txt.txt  pyproject.toml  requirements-min.txt  requirements.txt
archives/20260706_165827_RAG项目例会/: minutes.md
archives/20260706_172118_Skill脚本自查/: qa_history.jsonl  transcript.md
archives/20260706_172537_终检例会/: live_cache.jsonl  qa_history.jsonl  todos.csv
config/: .env  .env.example  app.yaml  show_env.bat
docs/: OPTIMIZATION.md  TROUBLESHOOTING.md  USAGE.md
scripts/: build_desktop.bat  meeting.bat  meeting.sh  setup.bat  setup.sh
skills/meeting-auto-skill/: SKILL.md
skills/meeting-auto-skill/references/: prompt-design.md
skills/meeting-auto-skill/scripts/: run_meeting_workflow.py
src/meeting_skill/: __init__.py  cli.py  config.py  workflow.py
src/meeting_skill/audio/: cache.py  recorder.py  transcriber.py
src/meeting_skill/exporters/: archive.py
src/meeting_skill/models/: chat.py  router.py  types.py
src/meeting_skill/rag/: meeting_rag.py
src/meeting_skill/text/: summarizer.py
